--- a/src/main/resources/templates/admin/adminNewBook.html
+++ b/src/main/resources/templates/admin/adminNewBook.html
@@ -45,10 +45,11 @@
       </div>
   
       <!-- 채팅방 입장 아이콘 -->
-      <div class="chatting">
+      <div class="chatting"  id="openPopup">
         채팅방
       </div>
     </div>
+    <header th:replace="~{admin/adminChatting}"></header>
 
   </section>
 
