--- a/src/main/resources/templates/admin/adminSales.html
+++ b/src/main/resources/templates/admin/adminSales.html
@@ -97,21 +97,21 @@
       </div>
     
       <div class="content">
-        <h2>매출관리</h2>
-
-        <div class="sort-dropdown">
-          <select id="sortSelect">
-              <option value="sales">전체 매출</option>
-              <option value="company">출판사</option>
-            </select>
-            <input type="text" class="text hidden">
-        </div>
-        <div class="btn-container">
-          <button class="weeks">1주일</button>
-          <button class="month">1개월</button>
-          <button class="sixMonth">6개월</button>
-          <button class="dateSelect">기간 설정</button>
-          <input type="date" class="date hidden">
+        <div class="title">
+          <div class="sort-dropdown">
+            <select id="sortSelect">
+                <option value="sales">전체 매출</option>
+                <option value="company">출판사</option>
+              </select>
+              <input type="text" class="text hidden">
+              <div class="btn-container">
+                <button class="weeks">1주일</button>
+                <button class="month">1개월</button>
+                <button class="sixMonth">6개월</button>
+                <button class="dateSelect">기간 설정</button>
+                <input type="date" class="date hidden">
+              </div>
+          </div>
         </div>
       
         <div class="graph-box">
