--- a/src/main/resources/static/css/admin/adminMain.css
+++ b/src/main/resources/static/css/admin/adminMain.css
@@ -394,7 +394,7 @@ html, body {
 }
 
 
-.member-table {
+.admin-box {
   width: 700px;
   table-layout: fixed;
   border-collapse: collapse;
@@ -407,7 +407,7 @@ html, body {
 
 
 
-.member-table th {
+.admin-box th {
   padding: 12px 15px;
   text-align: center;
   font-size: 14px;
@@ -417,15 +417,16 @@ html, body {
   background-color: #EFEFEF;
 }
 
-.member-table th:nth-child(1),
-.member-table th:nth-child(2),
-.member-table th:nth-child(3),
-.member-table th:nth-child(4),
-.member-table th:nth-child(5) {
+.admin-box th:nth-child(1),
+.admin-box th:nth-child(2),
+.admin-box th:nth-child(3),
+.admin-box th:nth-child(4),
+.admin-box th:nth-child(5),
+.admin-box th:nth-child(6) {
   background-color: #205375;
 }
 
-.member-table td {
+.admin-box td {
   padding: 12px 15px;
   text-align: center;
   font-size: 14px;
@@ -433,22 +434,22 @@ html, body {
   background-color: #EFEFEF;
 }
 
-.member-table tr{
+.admin-box tr{
   height: 40px;
 }
 
-.member-table tr:nth-child(even) td {
+.admin-box tr:nth-child(even) td {
   background-color: #ffffff;
 }
 
 
 
-.member-table tr:hover td {
+.admin-box tr:hover td {
   background-color: #a3a2a2;
 }
 
 
-.member-table button {
+.admin-box button {
   background-color: #205375; 
   color: #fff;
   border: none;
@@ -459,7 +460,7 @@ html, body {
   transition: background-color 0.3s ease;
 }
 
-.member-table button:hover {
+.admin-box button:hover {
   background-color: rgb(29, 30, 57);
 }
 
