--- a/src/main/resources/static/css/admin/adminMyPage.css
+++ b/src/main/resources/static/css/admin/adminMyPage.css
@@ -121,16 +121,13 @@ html, body {
 }
 
 .content {
-  flex-grow: 1; 
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  padding: 20px;
-  background-color: #efefef;
-  border-radius: 8px;
+  flex-grow: 1;  /* 주 콘텐츠가 사이드바 공간을 제외한 나머지를 차지하도록 설정 */
+  padding: 30px;
+  padding-top: 0;
+  padding-left: 0;
+  background-color: #fff;
+  border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  min-width: 0; 
-  max-width: 100%;
 }
 
 .info-box{
@@ -138,20 +135,9 @@ html, body {
   height: 700px;
 }
 
-/* 기본적으로 clear-btn 버튼 숨기기 */
-.clear-btn {
-  display: none;
-  position: absolute;
-  
-  top: 50%;
-  right: 35px;
-  transform: translateY(-50%);
-}
-
-
-
 /* 입력 필드의 오른쪽 여백을 늘려서 유효성 아이콘과 clear-btn이 겹치지 않도록 조정 */
 .form-control {
+  width: 700px;
   padding-right: 60px; /* 여유 있는 오른쪽 패딩 추가 */
 }
 
@@ -161,5 +147,5 @@ div label {
 }
 
 #updateBtn{
-  margin-top: 10px;
+  margin-bottom: 100px;
 }
