--- a/src/main/resources/static/css/admin/adminPage.css
+++ b/src/main/resources/static/css/admin/adminPage.css
@@ -13,7 +13,6 @@
   background-color: #EFEFEF;
   font-family: 'Pretendard-Regular';
   box-sizing: border-box;
-  /* border: 1px black solid; */
 }
 
 html, body {
@@ -56,20 +55,17 @@ html, body {
   width: 500px;
 }
 
-.adminName{
-  width: 50px;
-  height: 50px;
-  border-radius: 25px;
-}
-
-.content-box{
+.content-box {
   display: flex;
   flex-direction: row;
-  align-items: start;
-  justify-content: start;
-
-  margin-top: 10px;
+  align-items: stretch;
+  gap: 20px;
+  width: 100%; 
+  min-height: 100vh;
+  height: 100%;
+  overflow-x: hidden;
 }
+
 
 /* 사이드바 css입니당 */
 .sideBar {
@@ -122,83 +118,64 @@ html, body {
 .menu.active .submenu {
   display: block;
 }
-.content{
-  display: flex;
-  flex-direction: column;
-  width: 1500px;
-  height: 850px;
-}
 
-.graph-box{
-  width: 1500px;
-  height: 400px;
-}
 
 .title{
-  margin-top: -100px;
-  font-size: 30px;
-  font-weight: 100;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-/* 테이블 */
-.query-box {
+#createAdmin{
+    font-size: 25px;
+    padding: 10px 10px;
+    background-color: #205375;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    width: 200px;
+  }
+  
+  
+#createAdmin:hover {
+  background-color: rgb(29, 30, 57);
+}
+
+/* 테이블 스타일 */
+.admin-box {
   width: 1500px;
-  height: 650px;
-  overflow-y: auto; /* 세로 스크롤 활성화 */
-  overflow-x: hidden; /* 가로 스크롤 비활성화 */
-  padding: 0;
-}
-
-.list > table{
-  width: 1500px;
-  height: 380px;
-}
-
-
-
-
-.query-box {
-  width: 100%;
   table-layout: fixed;
   border-collapse: collapse;
-  border-spacing: 0;
   margin-top: 20px;
   background-color: #EFEFEF;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
-  table-layout: fixed;;
-  
+  overflow: hidden;
 }
 
 
-.query-box th {
-  position: sticky; 
-  top: 0;
-  z-index: 10;
-  background-color: #EFEFEF;
-  color: #fff; 
+
+.admin-box th {
+  width: 250px;
+  padding: 12px 15px;
   text-align: center;
-  font-size: 14px;
-  font-weight: 300; 
+  font-size: 20px;
   text-transform: uppercase;
-  height: 25px;
+  font-weight: 300; 
+  color: #fff; 
+  background-color: #EFEFEF;
 }
 
-.query-box th:nth-child(1),
-.query-box th:nth-child(2),
-.query-box th:nth-child(3),
-.query-box th:nth-child(4),
-.query-box th:nth-child(5),
-.query-box th:nth-child(6),
-.query-box th:nth-child(7),
-.query-box th:nth-child(8)
- {
+.admin-box th:nth-child(1),
+.admin-box th:nth-child(2),
+.admin-box th:nth-child(3),
+.admin-box th:nth-child(4),
+.admin-box th:nth-child(5),
+.admin-box th:nth-child(6) {
   background-color: #205375;
 }
 
-
-.query-box td, .query-box td div {
-  height: 30px;
+.admin-box td {
   padding: 12px 15px;
   text-align: center;
   font-size: 14px;
@@ -206,22 +183,22 @@ html, body {
   background-color: #EFEFEF;
 }
 
-.query-box th:nth-child(1){
-  width: 150px;
+.admin-box tr{
+  height: 40px;
 }
 
-.query-box tr:nth-child(even) td {
+.admin-box tr:nth-child(even) td {
   background-color: #ffffff;
 }
 
 
 
-.query-box tr:hover td {
+.admin-box tr:hover td {
   background-color: #a3a2a2;
 }
 
 
-.query-box button {
+.admin-box button {
   background-color: #205375; 
   color: #fff;
   border: none;
@@ -232,7 +209,7 @@ html, body {
   transition: background-color 0.3s ease;
 }
 
-.query-box button:hover {
+.admin-box button:hover {
   background-color: rgb(29, 30, 57);
 }
 
@@ -251,8 +228,6 @@ html, body {
   padding: 0;
   margin: 0;
   display: flex;
-  justify-content: center;
-  align-items: center;
   gap: 10px; 
 }
 
