--- a/src/main/resources/templates/admin/adminSchedule.html
+++ b/src/main/resources/templates/admin/adminSchedule.html
@@ -32,35 +32,20 @@
   
    
     <div class="function">
-      <!-- 알림 영역 -->
-      <div class="notification-container">
-       
-         <!-- 알림 버튼 -->
-        <button class="notification-btn" id="my-element">
-          <i class="fa-regular fa-bell">.</i>
-          <!-- 알림 개수 표시 -->
-          <div class="notification-count-area"></div>
-        </button>
-        
-        <!-- 알림 목록 -->
-        <ul class="notification-list">
-          
-        </ul>
-        
-      </div>
-      
       <!-- 관리자 담당 업무 -->
       <div class="adminName">
-        <div>
+        <div th:if= "${session.loginMember}"
+             th:text="${session.loginMember.adminName}">
           담당
         </div>
       </div>
   
       <!-- 채팅방 입장 아이콘 -->
       <div class="chatting">
-        채팅방
+        <button id="openPopup">채팅방</button>
       </div>
     </div>
+    <header th:replace="~{admin/adminChatting}"></header>
 
   </section>
   <main>
@@ -105,11 +90,9 @@
         </h3>
       </div>
 
-      <div class="form-group">
         <div id='calendar-container'>
             <div id="calendar"></div>
         </div>
-      </div>
 
    </section>
   </main>
