--- a/src/main/resources/templates/admin/adminSchedule.html
+++ b/src/main/resources/templates/admin/adminSchedule.html
@@ -42,7 +42,7 @@
   
       <!-- 채팅방 입장 아이콘 -->
       <div class="chatting">
-        <button id="openPopup">채팅방</button>
+        <button class="fa-solid fa-paper-plane" id="openPopup"></button>
       </div>
     </div>
     <header th:replace="~{admin/adminChatting}"></header>
