--- a/src/main/resources/static/css/myPage/myOrder.css
+++ b/src/main/resources/static/css/myPage/myOrder.css
@@ -79,6 +79,7 @@
     font-weight: bold;
     color: #333;
     margin: 1rem 0;
+    margin-right: 1rem;
 }
 
 .user-info {
@@ -392,3 +393,8 @@
     }
 } 
 
+.page-link.disabled {
+    pointer-events: none;
+    color: #6c757d;
+    opacity: 0.5;
+}
