오타가 좀 있어서 수정합니다.

--- a/src/main/resources/templates/common/footer.html
+++ b/src/main/resources/templates/common/footer.html
@@ -21,7 +21,7 @@
             <div class="col-md-8">
                 <div class="row">
                     <div class="col-md-4 mb-3">
-                        <h5 class="fw-bold mb-3">회사소개</h5>
+                        <h5 class="fw-bold mb-3">ABOUT US</h5>
                         <ul class="list-unstyled">
                             <li><a href="/about" class="text-light text-decoration-none">회사 소개</a></li>
                             <li><a href="/partnership" class="text-light text-decoration-none">제휴 문의</a></li>
@@ -29,7 +29,7 @@
                         </ul>
                     </div>
                     <div class="col-md-4 mb-3">
-                        <h5 class="fw-bold mb-3">이용약내</h5>
+                        <h5 class="fw-bold mb-3">서비스</h5>
                         <ul class="list-unstyled">
                             <li><a href="/support" class="text-light text-decoration-none">고객센터</a></li>
                             <li><a href="/customer/qna" class="text-light text-decoration-none">FAQ</a></li>
